--- a/CoreBeginners/Views/Home/Index.cshtml
+++ b/CoreBeginners/Views/Home/Index.cshtml
@@ -14,8 +14,8 @@
             </div>
             <img class="card-img-top thumbnal" src="@ImagePath" asp-append-version="true" />
             <div class="card-footer text-center">
-                <a asp-controller="Home" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary m-1">View</a>
-                <a asp-controller="Home" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary m-1">Edit</a>
+                <a asp-controller="Home" asp-action="Details" asp-route-id="@item.EncryptedId" class="btn btn-primary m-1">View</a>
+                <a asp-controller="Home" asp-action="Update" asp-route-id="@item.EncryptedId" class="btn btn-primary m-1">Edit</a>
                 <a href="#" class="btn btn-danger m-1">Delete</a>
             </div>
         </div>
