--- a/CoreBeginners/Views/Shared/Error.cshtml
+++ b/CoreBeginners/Views/Shared/Error.cshtml
@@ -1,18 +1,10 @@
-﻿
-<h3>An Occured Processing Your request</h3>
-<h5>Please Contact us on anand@gmail.com</h5>
-@*<hr />
-    <h3>Exception Details</h3>
-    <div class="alert alert-danger">
-        <h5>Exception Path</h5><hr />
-        <p>@ViewBag.ExceptionPath</p>
-    </div>
-    <div class="alert alert-danger">
-    <h5>Exception Message</h5><hr/>
-    <p>@ViewBag.Message</p>
-    </div>
-    <div class="alert alert-danger">
-    <h5>Exception Stack Trace</h5>
-    <p>@ViewBag.Trace</p>
-    </div>*@
-
+﻿@if (ViewBag.ErrorTitle == null)
+{
+    <h3>An Occured Processing Your request</h3>
+    <h5>Please Contact us on anand@gmail.com</h5>
+}
+else
+{
+    <h1 class="text-danger">@ViewBag.ErrorTitle </h1>
+    <h6 class="text-danger">@ViewBag.ErrorMsg</h6>
+}
