Uploaded with Adding Captcha and Password visible/invisible

--- a/CoreBeginners/Views/_ViewImports.cshtml
+++ b/CoreBeginners/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using CoreBeginners.Models
+﻿@using CoreBeginners
+@using CoreBeginners.Models
 @using CoreBeginners.ViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,DNTCaptcha.Core
