--- a/CoreBeginners/Views/Account/Login.cshtml
+++ b/CoreBeginners/Views/Account/Login.cshtml
@@ -10,7 +10,12 @@
     margin-top: 6px;
 
     }
-
+    .pswrdtxt i {
+        margin-right: 15px;
+        margin-top: -24px;
+        float: right;
+        cursor: pointer;
+    }
     .btns {
         width: 100%;
         padding: 12px;
@@ -53,32 +58,54 @@
 </style>
 <link href="~/lib/font/css/fontawesome.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+
 <div class="row">
     <div class="col-md-6">
         <h1>Login</h1><hr />
-        <form method="post">
-            <div class="text-danger" asp-validation-summary="All"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" autocomplete="off" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="custom-checkbox">
-                    <label asp-for="RememberMe ">
-                        <input asp-for="RememberMe" />
-                        @Html.DisplayNameFor(m => m.RememberMe)
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary" style="width:auto;">Login</button>
-            <div> <a asp-action="ForgotPassword">Forgot Password </a></div>
-        </form>
+                      <form method="post">
+                          <div class="text-danger" asp-validation-summary="All"></div>
+                          <div class="form-group">
+                              <label asp-for="Email"></label>
+                              <input asp-for="Email" class="form-control" />
+                              <span asp-validation-for="Email" class="text-danger"></span>
+                          </div>
+                          <div class="form-group pswrdtxt">
+                              <label asp-for="Password"></label>
+                              <input asp-for="Password" class="form-control" autocomplete="off" />
+                              <i class="far fa-eye" id="togglePassword"></i>
+                              <span id="errMsg" class="text-danger"></span>
+                              <span asp-validation-for="Password" class="text-danger"></span>
+                          </div>
+                          <div class="input-group mb-3">
+                              <dnt-captcha asp-captcha-generator-max="999999"
+                                           asp-captcha-generator-min="111111"
+                                           asp-captcha-generator-language="English"
+                                           asp-captcha-generator-display-mode="ShowDigits"
+                                           asp-use-relative-urls="true"
+                                           asp-placeholder="Enter Captcha"
+                                           asp-validation-error-message="Please enter the security code."
+                                           asp-font-name="Tahoma"
+                                           asp-font-size="20"
+                                           asp-fore-color="#333333"
+                                           asp-back-color="#ccc"
+                                           asp-text-box-class="text-box form-control"
+                                           asp-text-box-template="<span class='input-group-prepend'><span class='form-group-text'></span></span>{0}"
+                                           asp-validation-message-class="text-danger"
+                                           asp-refresh-button-class="fas fa-redo btn-sm"
+                                           asp-use-noise="false" />
+                          </div>
+                          <div class="form-group">
+                              <div class="custom-checkbox">
+                                  <label asp-for="RememberMe ">
+                                      <input asp-for="RememberMe" />
+                                      @Html.DisplayNameFor(m => m.RememberMe)
+                                  </label>
+                              </div>
+                          </div>
+                          <button type="submit" class="btn btn-primary" style="width:auto;">Login</button>
+                          <div> <a asp-action="ForgotPassword">Forgot Password </a></div>
+                      </form>
     </div>
     <div class="col-md-6">
         <h1>External Login</h1><hr />
@@ -121,3 +148,11 @@
         }
     </div>
 </div>
+
+
+<script src="~/lib/jquery/jquery.js"></script>
+<script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.js"></script>
+<script src="~/js/Site.js"></script>
+<script src="~/lib/jquery/jquery.validate.min.js" ></script>
+<script src="~/lib/jquery/jquery.validate.unobtrusive.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js"></script>
